MAJ conf projet + COR parsing nom des images + Style header page contact

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "StarWars",
+  "name": "EPSWA - Groupe 4",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "EPSWA - Groupe 4",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
